--- a/views/index.hbs
+++ b/views/index.hbs
@@ -69,7 +69,7 @@
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h4 class="modal-title" id="myModalLabel"><img id="emoji" src="./assets/img/waving-hand-emoji.png" /> Welcome to the Hacker News Scraper<br />Click <a href="/scrape">here</a> to scrape!</h4>
+                <h4 class="modal-title" id="myModalLabel"><img id="emoji" src="./assets/img/Hacker_Inside.jpg" /> Welcome to the Hacker News Scraper<br />Click <a href="/scrape">here</a> to scrape!</h4>
             </div>
         </div>
     </div>
